[tool.ruff]
line-length = 100

[tool.isort]
profile = "black"

[tool.poetry]
name = "botch"
version = "0.9.7-BETA"
packages = [{ include = "*", from = "src" }]
description = ""
authors = ["tiltowait <208040+tiltowait@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beanie = "^1.20.0"
python-dotenv = "^1.0.0"
aiohttp = "^3.8.5"
pyparsing = "^3.1.0"
numpy = "^1.25.1"
py-cord = "^2.4.1"
async-timeout = "^4.0.3"
fastapi = "^0.115.2"
cachetools = "^5.5.0"
uvicorn = "^0.32.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
mongomock-motor = "^0.0.34"
pytest-cov = "^4.1.0"
requests = "^2.31.0"
debugpy = "^1.6.7"
setuptools = "^72.2.0"
codespell = "^2.3.0"
mypy = "^1.12.0"
types-cachetools = "^5.5.0.20240820"
httpx = "^0.27.2"

[tool.poetry.scripts]
botch = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disable_error_code = ["method-assign"]

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["attr-defined", "import-untyped"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.report]
exclude_lines = [
    "pragma: not covered",
    "@overload"
]
