[project]
name = "botch"
version = "0.9.14"
description = "A Discord character manager and dice bot for Wod and CofD."
authors = [{ name = "tiltowait", email = "tiltowait <208040+tiltowait@users.noreply.github.com>" }]
requires-python = "~=3.12"
readme = "README.md"

[tool.ruff]
line-length = 100

[tool.isort]
profile = "black"

[tool.poetry]
packages = [{ include = "botch", from = "src" }]

[tool.poetry.dependencies]
python = "~=3.12"
python-dotenv = "^1.0.0"
aiohttp = "^3.8.5"
pyparsing = "^3.1.0"
numpy = "^1.25.1"
py-cord = {extras = ["speed"], version = "^2.6.1"}
async-timeout = "^4.0.3"
fastapi = "^0.115.2"
cachetools = "^5.5.0"
uvicorn = "^0.32.0"
beanie = "^1.29.0"
uvloop = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
mongomock-motor = "^0.0.35"
pytest-cov = "^6.0.0"
requests = "^2.31.0"
debugpy = "^1.6.7"
setuptools = "^72.2.0"
codespell = "^2.3.0"
types-cachetools = "^5.5.0.20240820"
httpx = "^0.27.2"
pyright = "==1.1.394"

[tool.poetry.scripts]
botch = "botch.launcher:botch"
beat = "botch.launcher:beat"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.report]
exclude_lines = [
    "pragma: not covered",
    "@overload"
]
